// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`triangle should default to a transparent background when not passed a backgroundColor 1`] = `
Object {
  "borderColor": "transparent",
  "borderLeftColor": "red",
  "borderStyle": "solid",
  "borderWidth": "5px 0 5px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should generate a proper triangle when passed all parameters 1`] = `
Object {
  "borderColor": "black",
  "borderLeftColor": "red",
  "borderStyle": "solid",
  "borderWidth": "5 0 5 20",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should generate a proper triangle when passed all parameters with units on width/height 1`] = `
Object {
  "borderColor": "black",
  "borderLeftColor": "red",
  "borderStyle": "solid",
  "borderWidth": "5em 0 5em 20em",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should generate a proper triangle when passed all parameters with units on width/height with float values 1`] = `
Object {
  "borderColor": "black",
  "borderLeftColor": "red",
  "borderStyle": "solid",
  "borderWidth": "5.25em 0 5.25em 20.5em",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should generate a proper triangle when passed string values for height and width 1`] = `
Object {
  "borderColor": "black",
  "borderLeftColor": "red",
  "borderStyle": "solid",
  "borderWidth": "5px 0 5px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render bottom pointing arrow with red foregroundColor, width of 20px and height 20px 1`] = `
Object {
  "borderColor": "transparent",
  "borderStyle": "solid",
  "borderTopColor": "red",
  "borderWidth": "20px 5px 0 5px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render bottomLeft pointing arrow with blue foregroundColor, width of 20px and height 20px 1`] = `
Object {
  "borderColor": "transparent",
  "borderLeftColor": "blue",
  "borderStyle": "solid",
  "borderWidth": "20px 0 0 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render bottomRight pointing arrow with blue foregroundColor, width of 20px and height 20px 1`] = `
Object {
  "borderBottomColor": "blue",
  "borderColor": "transparent",
  "borderStyle": "solid",
  "borderWidth": "0 0 20px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render left pointing arrow with blue foregroundColor, width of 10px and height 20px 1`] = `
Object {
  "borderColor": "transparent",
  "borderRightColor": "blue",
  "borderStyle": "solid",
  "borderWidth": "10px 10px 10px 0",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render right pointing arrow with width of 20px and height 10px 1`] = `
Object {
  "borderColor": "transparent",
  "borderLeftColor": "red",
  "borderStyle": "solid",
  "borderWidth": "5px 0 5px 20px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render top pointing arrow with green foregroundColor, width of 20px and height 20px 1`] = `
Object {
  "borderBottomColor": "green",
  "borderColor": "transparent",
  "borderStyle": "solid",
  "borderWidth": "0 10px 20px 10px",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render topLeft pointing arrow with blue foregroundColor, width of 20px and height 20px 1`] = `
Object {
  "borderColor": "transparent",
  "borderStyle": "solid",
  "borderTopColor": "blue",
  "borderWidth": "20px 20px 0 0",
  "height": "0",
  "width": "0",
}
`;

exports[`triangle should properly render topRight pointing arrow with blue foregroundColor, width of 20px and height 20px 1`] = `
Object {
  "borderColor": "transparent",
  "borderRightColor": "blue",
  "borderStyle": "solid",
  "borderWidth": "0 20px 20px 0",
  "height": "0",
  "width": "0",
}
`;
